Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Ujile Japhet<br />
+						<h1>Japhet Ujile<br />
 					 </h1>
 						<p>Junior Data Analyst/Scientist with proven expertise in transforming complex data into clear, actionable insights that drive business strategy. Proficient in SQL, Power BI, and Python (Pandas, NumPy, Scikit-Learn). I leverage exceptional communication skills to empower both technical and non-technical stakeholders, ensuring data-driven decisions directly contribute to key business objectives.
 						<p>Key Skills: Python (Pandas, NumPy, Matplotlib, Seaborn, Scikit-Learn), SQL, Power BI, Excel, Data Visualization, Statistical Analysis, Communication, Stakeholder Management.
@@ -191,4 +191,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
