Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									</a></h2>
 									<p>I served as the Data Analyst for Medcare, a medtech project by Studio3lauchpad's Team 2, a cross-functional unit comprising Product Managers, Data Analysts, UI/UX Designers, and Frontend/Backend Engineers. My primary role was to define the medical triage rules and translate them into a production-ready model capable of assigning an urgency level to patients based on their symptoms.</p>
 								</header>
-								<a href="https://github.com/assistantrawlings-lgtm/Medcare" class="image main"><img src="images/Medcare.png" alt="" /></a>
+								<a href="https://github.com/assistantrawlings-lgtm/Medcare" class="image fit"><img src="images/Medcare.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/assistantrawlings-lgtm/Medcare" class="button large">View Project</a></li>
 								</ul>
@@ -85,7 +85,7 @@
 									</a></h2>
 									<p>Developed a supervised machine learning model capable of predicting car prices using Linear Regression.</p>
 								</header>
-								<a href="https://github.com/assistantrawlings-lgtm/Car" class="image main"><img src="images/Car ML.jpg" alt="" /></a>
+								<a href="https://github.com/assistantrawlings-lgtm/Car" class="image fit"><img src="images/Car ML.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/assistantrawlings-lgtm/Car" class="button large">View Project</a></li>
 								</ul>
@@ -98,7 +98,7 @@
 									</a></h2>
 									<p>Our analysis utilizes an Excel dashboard to provide valuable insights into the telecommunications market in Nigeria, to assess mobile network quality and User Experience in Nigeria by specifically focusing on voice call and Internet connection (4G LTE) performance in 2025.</p>
 								</header>
-								<a href="https://medium.com/@gogojaphet8/assessing-mobile-network-quality-and-user-experience-in-nigeria-173afedc931f" class="image main"><img src="images/Network.jpg" alt="" /></a>
+								<a href="https://medium.com/@gogojaphet8/assessing-mobile-network-quality-and-user-experience-in-nigeria-173afedc931f" class="image fit"><img src="images/Network.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@gogojaphet8/assessing-mobile-network-quality-and-user-experience-in-nigeria-173afedc931f" class="button large">View Project</a></li>
 								</ul>
@@ -111,7 +111,7 @@
 									</a></h2>
 									<p>In this analysis conducted in Excel, the project aims to perform a comprehensive review of the HR report regarding attrition rate.</p>
 								</header>
-								<a href="https://medium.com/@gogojaphet8/hr-analytical-report-8e882802bbbe" class="image main"><img src="images/Business.jpg" alt="" /></a>
+								<a href="https://medium.com/@gogojaphet8/hr-analytical-report-8e882802bbbe" class="image fit"><img src="images/Business.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@gogojaphet8/hr-analytical-report-8e882802bbbe" class="button large">View Project</a></li>
 								</ul>
@@ -193,3 +193,4 @@
 	</body>
 
 </html>
+
