--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 							<section class="alt">
 								<h3>Location</h3>
 								<p><br />
-								Port Harcourt, Rivers State, Nigeria.</p>
+								Nigeria.</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -248,3 +248,4 @@
 
 	</body>
 </html>
+
